Switched to swagger api
